- QtilitiesApplication::initialize() important doc update and QtilitiesApplication::aboutQtilities() changed so that it returns the constructed about window.
- ObserverWidget does not allow selections with categories to be deleted anymore. This cause unpredictable results in previous versions.

Documented Classes:
At this stage proper documentation is still lacking on a class level for many classes. There is an effort to document these classes and below is a list of classes that were properly documented for this release:
- Qtilities::CoreGui::SearchBoxWidget
- Qtilities::Core::ObserverRelationalTable
- Qtilities::Core::RelationalTableEntry

Bug Fixes:
- Fixed memory leak in ActivityPolicyFilter destructor.
- Fixed bug in ObserverTreeModel where the local selection parent's display hints was used even if AbstractObserverItemModel::usesObserverHints() was false.
- Fixed example in "The Basics" documentation page.
- Fixed bug where AbstractTreeItem::setCategory() would not have changed the items modification state correctly.
- Got rid of all the "warning: type qualifiers ignored on function return type" & unused parameter warnings when building with gcc.
- Fixed bug where TreeNode::setCategorizedDisplayEnabled(false) would not have worked.
- Fixed bug in CodeEditorWidgetConfig constructor where window flags was not passed to base QWidget class correctly.
- Ubuntu: Fixed icon display & resource loading problems.
- Fixed ModeListWidget layout bug in QtilitiesMainWindow.
- ModeListWidget does not allow users to move mode icons anymore.
- Fixed bugs in Observer::treeCount(), Observer::treeChildren() and Observer::isParentInHierarchy() when using the containment tree building approach.
- Fixed bug where ObserverRelationalTable did not remove OBSERVER_VISITOR_ID properties in its destructor.
- Fixed bug in ObserverWidget::contextDeleted() where the function attempted to set the observer context to an invalid context in some scenarios.